force-app/main/default/objects/custcontact__c/custcontact__c.object-meta.xml
<CustomObject>
    <label>custcontact</label>
    <nameField>
        <label>name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>custcontacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>