force-app/main/default/objects/custcontact__c/fields/address__c.field-meta.xml
<CustomField>
    <fullName>address__c</fullName>
    <label>address</label>
    <type>TextArea</type>
</CustomField>