force-app/main/default/objects/custcontact__c/fields/Final_Results__c.field-meta.xml
<CustomField>
    <fullName>Final_Results__c</fullName>
    <label>Final Results</label>
    <type>TextArea</type>
</CustomField>