force-app/main/default/objects/custcontact__c/fields/id__c.field-meta.xml
<CustomField>
    <fullName>id__c</fullName>
    <label>id</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>