force-app/main/default/objects/custcontact__c/fields/Q1Result__c.field-meta.xml
<CustomField>
    <fullName>Q1Result__c</fullName>
    <label>Q1Result</label>
    <type>TextArea</type>
</CustomField>