force-app/main/default/objects/custcontact__c/fields/Q2_Result__c.field-meta.xml
<CustomField>
    <fullName>Q2_Result__c</fullName>
    <label>Q2 Result</label>
    <length>100</length>
    <type>Text</type>
</CustomField>