force-app/main/default/objects/custcontact__c/fields/Q3Result__c.field-meta.xml
<CustomField>
    <fullName>Q3Result__c</fullName>
    <label>Q3Result</label>
    <length>100</length>
    <type>Text</type>
</CustomField>