force-app/main/default/objects/custcontact__c/fields/RAddress__c.field-meta.xml
<CustomField>
    <fullName>RAddress__c</fullName>
    <label>Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>