force-app/main/default/objects/custcontact__c/fields/WFieldInsert__c.field-meta.xml
<CustomField>
    <fullName>WFieldInsert__c</fullName>
    <description>This Field gets updated only when the record gets inserted</description>
    <label>WFieldInsert</label>
    <type>TextArea</type>
</CustomField>