force-app/main/default/objects/custcontact__c/fields/WFieldUpdate__c.field-meta.xml
<CustomField>
    <fullName>WFieldUpdate__c</fullName>
    <description>Filed which gets updated when the record gets updated</description>
    <label>WFieldUpdate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>